fixed image loading issue and now can load profile image onto app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     // Declare the dependency for the Cloud Firestore library
     // When using the BoM, you don't specify versions in Firebase library dependencies
+    //added firestore
     implementation 'com.google.firebase:firebase-firestore'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
