--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/Theme.Pneuma">
         <activity android:name=".SettingsActivity"></activity>
         <activity android:name=".PostActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".SetupActivity" />
         <activity android:name=".loginActivity">
             <intent-filter>
