--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pneuma">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".QuestionActivity"></activity>
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".PostActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SetupActivity" />
